[package]
name = "biotools_linter_server"
edition = "2021"
version = "0.1.0"

[dependencies]
dotenv = "0.15.0"
html-escape = "0.2.13"
lazy_static = "1.4.0"
pico-args = "0.5.0"
regex = "1.9.3"
serde_json = "1.0.105"
tera = "1.19"
tracing = "0.1.37"
utoipa = { version = "3.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
serde_repr = "0.1"

[dependencies.axum]
version = "0.6.20"
features = ["json", "matched-path", "tokio", "tower-log", "http1", "form", "query"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["num_cpus", "tokio-macros", "macros", "rt", "rt-multi-thread"]
default-features = false

[dependencies.tower-http]
version = "0.4.3"
features = ["tracing", "mime_guess", "mime", "httpdate", "fs", "percent-encoding"]
default-features = false

[dependencies.chrono]
version = "0.4.26"
features = ["wasmbind", "oldtime", "std"]
default-features = false

[dependencies.sqlx]
version = "0.7"
features = ["postgres", "sqlx-postgres", "_rt-tokio", "any", "tls-native-tls", "json", "runtime-tokio", "migrate", "macros"]
default-features = false

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[profile.release]
lto = true
codegen-units = 1

[profile.release.package]
