[package]
name = "biotools_linter_server"
edition = "2021"
version = "1.0.0"
authors = ["Filip Rusz <251814@muni.com>"]
documentation = "https://biotools-linter.biodata.ceitec.cz/docs"
homepage = "https://biotools-linter.biodata.ceitec.cz/"
repository = "https://github.com/rust-lang/cargo/"
license = "MIT"

[dependencies]
dotenv = "0.15.0"
html-escape = "0.2.13"
lazy_static = "1.4.0"
pico-args = "0.5.0"
regex = "1.9.3"
serde_json = "1.0.105"
tracing = "0.1.37"
utoipa = { version = "4.0.0", features = ["axum_extras", "repr"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
serde_repr = "0.1"
env_logger = {version="0.10.0", default_features = false, features=[]}
pulldown-cmark = "0.9.3"
chrono = "0.4.26"

[dev-dependencies]
axum-test-helper = "0.3.0"

[dependencies.axum]
version = "0.6.20"
features = ["json", "matched-path", "tokio", "http1", "query"]
default-features = false

[dependencies.tera]
version = "1.19"
features = []
default-features=false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["num_cpus", "tokio-macros", "macros", "rt", "rt-multi-thread"]
default-features = false

[dependencies.tower-http]
version = "0.4.3"
features = ["tracing", "mime_guess", "mime", "httpdate", "fs", "percent-encoding"]
default-features = false

[dependencies.sqlx]
version = "0.7"
features = ["postgres", "tls-native-tls", "runtime-tokio", "macros"]
default-features = false

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[profile.release]
lto = true
codegen-units = 1
